# hashiwokakero

./: CMakeLists.txt  CREDITS  Makefile  README  README.md  SOLVER  clean.sh  eval-v1.txt  hashi_text  hashi_text.c  install.sh  look sir, droids.txt  solver.c.save  unistall.sh
CMakeModules/: FindSDL2.cmake
android/: AndroidManifest.xml  INSTALL  build.xml  cremi-env.sh  download.sh  env.sh
android/assets/save/: game_save.txt
android/jni/src/: #Android.mk#  .#Android.mk  Android.mk  Makefile
include/: game.h  generate.h  interface.h
rapport/: explication_solveur.eps  rapport.tex
save/: 3bridges.txt  4bridges.txt  game_hard.txt
solver/: solver.c
src/: game.c  generate.c  hashi_text.c  hashi_text.c~  interface.c  node.c
src/core/: file.c  file.h  game.c  generate.c  generate.h  secure.c  solver.c
src/gui/: hashi_gui.c  menu.c  menu.h  model.c  model.h  sdlfile.c  sdlfile.h  sdltools.c  sdltools.h
src/solver/: hashi_solve.c  slist.c  slist.h  solver.c  solver.h  solver2.c
src/test/: test_can_add_bridge_dir1.c  test_can_add_bridge_dir2.c  test_can_add_bridge_dir3.c  test_can_add_bridge_dir4.c  test_can_add_bridge_dir5.c  test_copy_game.c  test_copy_game_bridges.c  test_game_over.c  test_get_neighbour1.c  test_get_neighbour2.c  test_get_node_number1.c  test_get_node_number2.c  test_pont_equivalent.c  test_secure.c
src/text/: hashi_text.c  interface.c  interface.h
src/tools/: file.c  file.h  generate.c  generate.h  secure.c  secure.h
tests/: test_can_add_bridge_dir1.c  test_can_add_bridge_dir2.c  test_can_add_bridge_dir5.c  test_copy_game.c  test_game1.c  test_game2.c  test_game3.c  test_game4.c  test_game5.c  test_game6.c  test_game7.c  test_game8.c  test_game9.c  test_game_over.c  test_get_neighbour1.c  test_get_node_number1.c  test_get_node_number2.c  test_pont_equivalent.c
tests/Test_can_add_bridge_dir/: test_can_add_bridge_dir3.c  test_can_add_bridge_dir4.c
tests/Test_copy_game/: test_copy_game.c
tests/Test_copy_game_bridges/: test_copy_game_bridges.c
tests/Test_get_neighbour/: test_get_neighbour2.c
tests/Test_get_node_number/: test_get_node_number1.c  test_get_node_number2.c
tests/Test_pont_equivalent/: test_pont_equivalent.c
txt/: README  TODO  diff-V2.txt  game.txt  maps  readme  todo  todo.txt
